Bug 1269337 - Implement physical and logical size for GL render target. r=mattwoodrow